Revised structures and examples of letter guides to ensure they align

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body, h1, h2, h3, h4, p, a, button {
     font-family: BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-h1, h2, h3, h4, button {
+h1, h2, h3, h4, button, p.center {
     text-align: center;
 }
 
